--- a/Copy_of_W10_Regression_Discontinuity.ipynb
+++ b/Copy_of_W10_Regression_Discontinuity.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3AVwU5-Zpy7U"
+        "id": "f8nVqGsbOeUv"
       },
       "source": [
         "# Regression Discontinuity\n",
@@ -30,28 +30,25 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GON4kKkrpy7W",
-        "outputId": "577bd766-be1a-414b-b5a9-68b8fed40e1b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "8CKSC-BaOeU1",
+        "outputId": "fe4a22b7-691c-4fe2-ae2d-9d834e083b29"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "mkdir: cannot create directory ‘data’: File exists\n",
+            "mkdir: data: File exists\n",
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 3141k  100 3141k    0     0  17.6M      0 --:--:-- --:--:-- --:--:-- 17.7M\n",
+            "100 3141k  100 3141k    0     0  28.2M      0 --:--:-- --:--:-- --:--:-- 30.0M\n",
             "<?xml version='1.0' encoding='UTF-8'?><Error><Code>NoSuchKey</Code><Message>The specified key does not exist.</Message><Details>No such object: qm2/wk10/county_labor.csv-o</Details></Error>curl: (6) Could not resolve host: data\n",
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100  9177  100  9177    0     0  37319      0 --:--:-- --:--:-- --:--:-- 37304\n",
+            "100  9177  100  9177    0     0   260k      0 --:--:-- --:--:-- --:--:--     0- --:--:-- --:--:--  298k\n",
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100  1728  100  1728    0     0   5364      0 --:--:-- --:--:-- --:--:--  5383\n"
+            "100  1728  100  1728    0     0  70895      0 --:--:-- --:--:-- --:--:-- 82285\n"
           ]
         }
       ],
@@ -70,7 +67,7 @@
         "tags": [
           "hide-input"
         ],
-        "id": "s5_TG5lcpy7X"
+        "id": "aM1tmNOGOeU3"
       },
       "outputs": [],
       "source": [
@@ -94,7 +91,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9ki6V5ODpy7X"
+        "id": "QHQ30bWqOeU4"
       },
       "source": [
         "# Spatial Discontinuities\n",
@@ -129,8 +126,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "D48RzFibpy7X",
-        "outputId": "747a76a7-7b62-41b5-fc48-28b7338d69d2",
+        "id": "TAImT7xjOeU5",
+        "outputId": "76c67d7a-361e-4697-abb4-7bfd3ba7b996",
         "colab": {
           "referenced_widgets": [
             "02537c2f86bf439ca5b36b31c53f2bb8"
@@ -164,7 +161,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3jshd1QPpy7Y"
+        "id": "A2RxErmmOeU6"
       },
       "source": [
         "On the left side of the river is Philladelphia, PA, while on the right side is Camden, NJ. The code below uses the county shapefile we used before to isolate the counties in NJ and PA that are on the border."
@@ -174,8 +171,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-DjV4u0Npy7Y",
-        "outputId": "0e8bf789-36ce-48a1-d572-01b6dd70abd3"
+        "id": "7aGsawYSOeU6",
+        "outputId": "df447020-9bc5-47c7-a40f-b50845d7756b"
       },
       "outputs": [
         {
@@ -222,7 +219,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "isouALVxpy7Y"
+        "id": "_fUxg6WeOeU7"
       },
       "source": [
         "We can now restrict our sample to only include counties within a set distance the border, and set up a regression discontinuity design in which:\n",
@@ -236,8 +233,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HeOYpJvypy7Z",
-        "outputId": "4e10e396-08df-4a34-99ee-c03029b41ed4"
+        "id": "f2e89bvOOeU8",
+        "outputId": "4d626ce5-9185-4592-9049-9cf68ca49cd1"
       },
       "outputs": [
         {
@@ -283,7 +280,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0rW9bV1mpy7Z"
+        "id": "BR2RiJNHOeU9"
       },
       "source": [
         "\n",
@@ -299,7 +296,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_ROZhjdcpy7Z"
+        "id": "r8tUUfVJOeU9"
       },
       "source": [
         "## Is Alcohol Killing You?\n",
@@ -317,8 +314,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "uL3hf8b2py7Z",
-        "outputId": "0911518a-8168-4f4e-ad34-316c39d70008"
+        "id": "W8jERBZEOeU9",
+        "outputId": "65ac66ec-680d-426d-bc36-39cd597fd449"
       },
       "outputs": [
         {
@@ -410,7 +407,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WyIeNbQ-py7Z"
+        "id": "KRnFc0VrOeU-"
       },
       "source": [
         "Just to aid visibility (and for another important reason we will see later) we will centralize the running variable `agecell` at the threshold 21."
@@ -420,7 +417,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_PbJTCwzpy7Z"
+        "id": "Fq5ij6_8OeU-"
       },
       "outputs": [],
       "source": [
@@ -430,7 +427,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7FicZ-lOpy7Z"
+        "id": "XzF38uL7OeU-"
       },
       "source": [
         "If we plot the multiple outcome variables (`all`, `mva`, `suicide`) with the runing variable on the x axis, we get some visual cue about some sort of jump in mortality as we cross the legal drinking age."
@@ -440,8 +437,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lFB463nXpy7Z",
-        "outputId": "93f42334-6781-48fe-f488-6e3f8d5af998"
+        "id": "A4W3F61UOeU-",
+        "outputId": "e38e9b89-a04a-4894-b5f6-bca23551218b"
       },
       "outputs": [
         {
@@ -471,7 +468,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UUuEbbW_py7a"
+        "id": "dTqd-AW4OeU_"
       },
       "source": [
         "There are some cues, but we need more than that. What exactly is the effect of drinking on mortality at the threshold? And what is the standard error on that estimate?\n",
@@ -500,8 +497,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yUkCSYhJpy7a",
-        "outputId": "515dbaa4-460e-4955-b63d-3573d6d636f0"
+        "id": "3mN8z2uZOeU_",
+        "outputId": "08a4ce1f-94b9-4755-94e9-52d62e34abbb"
       },
       "outputs": [
         {
@@ -547,7 +544,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rKaiGMaopy7a"
+        "id": "5Knz5NIIOeVA"
       },
       "source": [
         "This model is telling us that mortality increases by 7.6627 points with the consumption of alcohol. Another way of putting this is that alcohol increases the chance of death by all causes by 8% $(100*((7.6627+93.6184)/93.6184 - 1))$. Notice that this also gives us standard errors for our causal effect estimate. In this case, the effect is statistically significant, since the p-value is below 0.01. We can calculate the treatment effect programattically as follows:"
@@ -557,8 +554,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "l_mYedzEpy7a",
-        "outputId": "5c8cf58f-19d8-4aff-8f75-479984b44348"
+        "id": "pFWnESl7OeVA",
+        "outputId": "82b93d8c-5772-467b-bd85-173241d71cae"
       },
       "outputs": [
         {
@@ -578,7 +575,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ytmydYAspy7a"
+        "id": "mhUM5BjsOeVA"
       },
       "source": [
         "\n",
@@ -589,8 +586,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Tii_iFz9py7a",
-        "outputId": "56bfdb19-7185-41dc-e114-f4f0912c755a"
+        "id": "HQ4cI21wOeVB",
+        "outputId": "311dd2bf-912e-41ac-fafc-b954a924ba29"
       },
       "outputs": [
         {
@@ -614,7 +611,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EBWEJ0FZpy7a"
+        "id": "zxoAK56IOeVB"
       },
       "source": [
         "### Exercise 1\n",
@@ -632,7 +629,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "K0bIqgwPpy7a"
+        "id": "2h5oZDGcOeVB"
       },
       "outputs": [],
       "source": []
@@ -640,7 +637,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mZUOMhVIpy7a"
+        "id": "RrKmLwySOeVB"
       },
       "source": [
         "### Exercise 2\n",
@@ -654,7 +651,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "A9eg9Mu7py7a"
+        "id": "tGIufjnLOeVB"
       },
       "outputs": [],
       "source": []
@@ -662,7 +659,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TiOg3BGQpy7a"
+        "id": "SHJjBrJ9OeVB"
       },
       "source": [
         "### Kernel Weighting\n",
@@ -684,7 +681,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "r2BbIqmFpy7a"
+        "id": "HsZq4py-OeVC"
       },
       "outputs": [],
       "source": [
@@ -697,8 +694,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "T8GE1HEzpy7a",
-        "outputId": "eab8c673-2b7e-4c93-fd03-36abe83f26e3"
+        "id": "LkAfuoMpOeVC",
+        "outputId": "554dbd78-bfd8-4e1a-db47-676fda5960ed"
       },
       "outputs": [
         {
@@ -722,7 +719,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WqWF_ih-py7a"
+        "id": "Rfq5O595OeVC"
       },
       "source": [
         "If we apply these weights to our original problem, the impact of alcohol gets bigger, at least for all causes. It jumps from 7.6627 to 9.7004. The result remains very significant. Also, notice that I'm using `wls` instead of `ols`"
@@ -732,8 +729,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "hUvwqkXupy7a",
-        "outputId": "ec8d68ad-e45a-4331-95fa-2242e5a923e1"
+        "id": "c_IijlvmOeVC",
+        "outputId": "c5795428-8d41-4949-cf2b-f36c68af1543"
       },
       "outputs": [
         {
@@ -777,8 +774,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yiAb3i1Mpy7a",
-        "outputId": "6bbb9c53-d969-4d4c-adf2-88371f908d45"
+        "id": "6w8gPC5xOeVD",
+        "outputId": "92a630cf-220b-473f-a96e-4cc265b6acac"
       },
       "outputs": [
         {
@@ -801,7 +798,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1zxKOPVxpy7b"
+        "id": "rZzXa2aMOeVD"
       },
       "source": [
         "And here is what it looks like for the other causes of death. Notice how the regression on the right is more negatively sloped since it disconsiders the right most points."
@@ -811,8 +808,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gGz0Ie34py7b",
-        "outputId": "a3814c79-b180-4d6c-ba1c-c4cb640dc0c1"
+        "id": "oEPxtxLlOeVD",
+        "outputId": "2e570063-c38b-42ae-84da-c86c4d98ba98"
       },
       "outputs": [
         {
@@ -844,7 +841,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Xt3UKiN-py7b"
+        "id": "c9EyhUsiOeVD"
       },
       "source": [
         "With the exception of suicide, it looks like adding the kernel weight made the negative impact on alcohol bigger. Once again, if we want to minimize the death rate, we should NOT recommend lowering the legal drinking age, since there is a clear impact of alcohol on the death rates.\n",
@@ -864,8 +861,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "86vdj0Rapy7b",
-        "outputId": "695fa152-f41b-4fa6-c67a-934fcb2e685c"
+        "id": "iPwXO2kZOeVE",
+        "outputId": "5e9af84d-c7ec-4d26-e2da-d54d43bb5018"
       },
       "outputs": [
         {
@@ -957,7 +954,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7exUG50opy7b"
+        "id": "LdfX2-9HOeVE"
       },
       "source": [
         "Once again, this data is grouped by the running variable. It contains not only the running variable (minscore, already centered at zero) and the outcome (avgearnings), but it also has the probability of receiving a diploma in that score cell and the size of the call (n). So, for example, out of the 12 students in the cell -30 below the score threshold, only 5 were able to get the diploma (12 * 0,416).\n",
@@ -969,8 +966,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gX_T9yZspy7b",
-        "outputId": "e8ae6708-252f-4ba8-a09e-46e5e4bc188f"
+        "id": "-ABQmJZKOeVE",
+        "outputId": "fc338ed3-6686-4825-9d49-48748fd44a28"
       },
       "outputs": [
         {
@@ -994,7 +991,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "w3MnzcSepy7b"
+        "id": "LUfn1e5HOeVE"
       },
       "source": [
         "We can think of fuzzy RD as a sort of non compliance. Passing the threshold should make everyone receive the diploma, but some students, the never takers, don’t get it. Likewise, being below the threshold should prevent you from getting a diploma, but some students, the always takers, manage to get it anyway.\n",
@@ -1018,8 +1015,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yHNmd0RKpy7i",
-        "outputId": "baeeaae1-588b-4ae8-ace7-08d6f0ee2287"
+        "id": "OeKcPL8JOeVJ",
+        "outputId": "d8dfab15-e325-4af8-8e24-79b45d128b56"
       },
       "outputs": [
         {
@@ -1050,7 +1047,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8n9dRVNmpy7i"
+        "id": "vvq-gz3iOeVJ"
       },
       "source": [
         "The first plot shows how our data density looks like. As we can see, there are no spikes around the threshold, meaning there is no bunching. Students are not manipulating where they fall on the threshold. Just for illustrative purposes, the second plot shows what bunching would look like if students could manipulate where they fall on the threshold. We would see a spike in the density for the cells just above the threshold, since many students would be on that cell, barely passing the exam.\n",
@@ -1062,8 +1059,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0ey02G7Ipy7i",
-        "outputId": "4dfa2dae-bcea-4813-dbbb-c4a4ded654ca"
+        "id": "3RXRDgg5OeVK",
+        "outputId": "2ac62b0b-051a-4449-caee-d1206507bdde"
       },
       "outputs": [
         {
@@ -1108,7 +1105,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K6Srtn2Cpy7i"
+        "id": "FF6CquOMOeVK"
       },
       "source": [
         "This is telling us that the effect of a diploma is -97.7571, but this is not statistically significant (P-value of 0.5). If we plot these results, we get a very continuous line at the threshold. More educated people indeed make more money, but there isn't a jump at the point where they receive the 12th grade diploma. This is an argument in favor of the view that says that education increases earnings by making people more productive, rather than being just a signal to the marker. In other words, there is no sheepskin effect."
@@ -1118,8 +1115,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mW73mvdWpy7i",
-        "outputId": "1f79b0ed-dd70-40bd-d21c-36572c2ba4d7"
+        "id": "2TouUVw4OeVK",
+        "outputId": "91b1b712-5e39-4f8c-dc4f-6ec0303515d5"
       },
       "outputs": [
         {
@@ -1144,7 +1141,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "35CzXARlpy7i"
+        "id": "Ze9L-7MxOeVK"
       },
       "source": [
         "However, as we know from the way non compliance bias works, this result is biased towards zero. To correct for that, we need to scale it by the first stage and get the Wald estimator. Unfortunately, there isn't a good Python implementation for this, so we will have to do it manually and use bootstrap to get the standard errors.\n",
@@ -1156,7 +1153,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SCeMCKxHpy7i"
+        "id": "nAs00BYROeVL"
       },
       "outputs": [],
       "source": [
@@ -1171,7 +1168,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "45QMmaxUpy7i"
+        "id": "euCizX19OeVL"
       },
       "outputs": [],
       "source": [
@@ -1187,7 +1184,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tOfcJ0dZpy7i"
+        "id": "CR6Al3XsOeVL"
       },
       "source": [
         "With the bootstrap samples, we can plot the distribution of ATEs and see where the 95% confidence interval is."
@@ -1197,8 +1194,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ncfrNVU1py7i",
-        "outputId": "e8e4fb21-1465-404f-f946-ffabe2a2f603"
+        "id": "ap0OBwEsOeVL",
+        "outputId": "f02118d4-9214-41cc-da18-40d25a081696"
       },
       "outputs": [
         {
@@ -1224,7 +1221,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8Ck5TAmcpy7i"
+        "id": "0vO3APVYOeVL"
       },
       "source": [
         "As you can see, even when we scale the effect by the first stage, it is still not statistically different from zero. This means that education doesn't increase earnings by a simple sheepskin effect, but rather by increasing one's productivity.\n",
